[tool.poetry]
name = "new html"
version = "0.1.0"
description = ""
authors = ["MOHAMMED SAFWAN A <mohammedsafwan448@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
